Add option to delete metadata

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <button class="tool-btn" id="compressBtn">🗜️ Compress</button>
                 <button class="tool-btn" id="cropBtn">✂️ Crop Pages</button>
                 <button class="tool-btn" id="removeCommentsBtn">💬 Remove Comments</button>
+                <button class="tool-btn" id="removeMetadataBtn">🧹 Remove Metadata</button>
                 <button class="tool-btn danger" id="deletePageBtn">🗑️ Delete Page</button>
             </div>
             <div class="pdf-viewer">
